--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     .nav-link:hover::after, .nav-link.active::after { width: 100%; }
 
-    /* LOGO PANEL GAUCHE - DESIGN STUDIO */
+    /* LOGO PANEL GAUCHE - DESIGN STUDIO ÉPURÉ */
     .hero-logo-card {
       background: white;
       padding: 2.5rem 2rem; 
@@ -333,16 +333,15 @@
 
     <main class="flex-grow">
       
-      <!-- PAGE ACCUEIL - LOGO REMONTÉ ET CONTENU HARMONISÉ -->
+      <!-- PAGE ACCUEIL -->
       <section id="page-home" class="page active px-10 pt-4 pb-32">
         <div class="max-w-7xl mx-auto flex flex-col lg:flex-row gap-16 items-center lg:items-start pt-12">
           
-          <!-- LE LOGO PANEL GAUCHE -->
+          <!-- LE LOGO PANEL GAUCHE - SANS MENTION TEXTUELLE BASSE -->
           <div class="flex-shrink-0">
             <div class="hero-logo-card">
-               <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="w-40 h-auto object-contain mb-8">
-               <h2 class="text-3xl font-black text-[#00565e] uppercase tracking-[0.4em] text-center">Nova360</h2>
-               <p class="text-[10px] font-bold text-[#278299] uppercase tracking-[0.5em] mt-4 text-center">Architectural Lab</p>
+               <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="w-40 h-auto object-contain">
+               <h2 class="text-3xl font-black text-[#00565e] uppercase tracking-[0.4em] text-center mt-6">Nova360</h2>
             </div>
           </div>
 
@@ -384,15 +383,15 @@
             <div class="feature-card p-10 rounded-[2rem] border-t-4 border-[#00565e]">
               <div class="status-half-circle"></div>
               <div class="mb-6 text-[#00565e]">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg>
+                <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg>
               </div>
               <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic">Liberté Totale</h3>
               <p class="text-slate-500 text-sm leading-relaxed font-light">Navigation intuitive sans friction sur mobile et desktop. Le futur de la visite est instantané.</p>
             </div>
             <div class="feature-card p-10 rounded-[2rem] border-t-4 border-[#00565e]">
               <div class="status-half-circle"></div>
-              <div class="mb-6 text-[#00565e]">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/></svg>
+              <div class="mb-8 text-[#00565e]">
+                <svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/></svg>
               </div>
               <h3 class="text-xl font-bold text-slate-900 mb-4 font-serif italic">Conversion Élevée</h3>
               <p class="text-slate-500 text-sm leading-relaxed font-light">Intégrez vos flux transactionnels directement dans l'image pour transformer la vue en vente.</p>
@@ -401,7 +400,7 @@
         </div>
       </section>
 
-      <!-- PAGE CATÉGORIES COMPLETEMENT RESTAURÉE -->
+      <!-- PAGE CATÉGORIES -->
       <section id="page-categories" class="page px-10 py-24 max-w-7xl mx-auto">
         <div class="text-center mb-16">
           <h2 class="text-5xl md:text-6xl font-light text-slate-800 uppercase tracking-tighter">Nos <span class="font-serif italic text-[#00565e]">Catégories</span></h2>
@@ -483,7 +482,7 @@
         </div>
       </section>
 
-      <!-- PAGE DÉMONSTRATIONS COMPLETEMENT RESTAURÉE -->
+      <!-- PAGE DÉMONSTRATIONS -->
       <section id="page-demo" class="page overflow-hidden">
         <div id="demo-modal" class="fixed inset-0 bg-black/95 z-[500] hidden items-center justify-center p-6 backdrop-blur-xl">
           <div class="bg-white max-w-md w-full p-12 rounded-[3rem] text-center shadow-2xl scale-95 opacity-0 transition-all duration-700" id="modal-content">
@@ -494,7 +493,7 @@
           </div>
         </div>
 
-        <!-- TOP BAR DÉMO HARMONISÉE COULEUR PETROL -->
+        <!-- TOP BAR DÉMO -->
         <div class="demo-topbar flex items-center justify-between px-8 py-3 shadow-2xl border-b border-white/5 flex-shrink-0">
           <div class="flex items-center gap-6 flex-grow overflow-hidden">
             <div class="flex items-center bg-white px-4 py-1.5 rounded-lg shadow-sm">
@@ -530,6 +529,7 @@
           </div>
         </div>
 
+        <!-- ZONE DÉMO -->
         <div class="demo-frame-container">
           <button onclick="toggleImmersion(false)" class="exit-immersion">⛶</button>
           <div class="tour-frame-architectural">
