--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <section id="page-home" class="page active px-10 pt-4 pb-32">
         <div class="max-w-7xl mx-auto flex flex-col lg:flex-row gap-16 items-center lg:items-start pt-12">
           
-          <!-- LE LOGO PANEL GAUCHE - SANS MENTION TEXTUELLE BASSE -->
+          <!-- LE LOGO PANEL GAUCHE -->
           <div class="flex-shrink-0">
             <div class="hero-logo-card">
                <img src="https://i.postimg.cc/FKTBjyBR/Logo-Nova-360-V2-0.png" alt="Logo Nova 360" class="w-40 h-auto object-contain">
@@ -362,9 +362,10 @@
               Redéfinissez la découverte d'espaces avec l'ingénierie immersive de Nova360. Plus qu'une visite, une expérience interactive sans limites.
             </p>
             
+            <!-- HARMONISATION DES COULEURS DES BOUTONS (Deep Petrol pour les deux) -->
             <div class="flex flex-col sm:flex-row justify-center lg:justify-start items-center gap-6 mb-20">
               <button class="cta-button min-w-[280px] px-12 py-6 rounded-full font-black text-[11px] uppercase tracking-[0.3em] text-white shadow-2xl" onclick="window.open('https://nova360.app.codinsight.app/', '_blank')">Lancer Nova360</button>
-              <button class="cta-button min-w-[280px] px-12 py-6 rounded-full font-black text-[11px] uppercase tracking-[0.3em] text-white shadow-2xl bg-[#315a97]" onclick="navigateToPage('demo')">Démonstrations</button>
+              <button class="cta-button min-w-[280px] px-12 py-6 rounded-full font-black text-[11px] uppercase tracking-[0.3em] text-white shadow-2xl" onclick="navigateToPage('demo')">Démonstrations</button>
             </div>
           </div>
         </div>
@@ -472,7 +473,7 @@
             <div class="status-half-circle"></div>
             <div class="text-5xl mb-6">🏖️</div>
             <h3 class="text-xl font-bold text-slate-900 mb-3 font-serif italic uppercase tracking-wider">Tourisme</h3>
-            <p class="text-slate-500 text-xs mb-8 leading-relaxed font-light">Le territoire à portée de regard. Attirez les visiteurs avec des panoramas interactifs.</p>
+            <p class="text-slate-500 text-xs mb-8 leading-relaxed font-light">Le territoire à portée de regard. Attirez les visiteurs avec des panoramas interactifs saisissants.</p>
             <ul class="text-[9px] text-slate-400 space-y-3 mb-8 font-black uppercase tracking-[0.2em] border-t border-slate-50 pt-6">
               <li class="flex items-center gap-3"><span class="w-1 h-1 bg-[#00565e] rounded-full"></span> Multilingue</li>
               <li class="flex items-center gap-3"><span class="w-1 h-1 bg-[#00565e] rounded-full"></span> Hotspots</li>
@@ -540,7 +541,7 @@
 
       <!-- PAGE VISION -->
       <section id="page-about" class="page px-10 py-24 max-w-6xl mx-auto">
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-24 items-center">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-24 items-center mt-6">
           <div class="space-y-10 text-left">
             <h2 class="text-5xl md:text-7xl font-light text-slate-800 leading-[1.1]">L'excellence <br><span class="font-serif italic text-[#00565e]">de la visibilité.</span></h2>
             <p class="text-xl text-slate-500 font-light border-l-4 border-[#00565e] pl-10 py-4 leading-relaxed">
